--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -80,17 +80,17 @@
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
         <activity
-            android:name="song.jtslkj.activity.BaijiaBudgetDetailActivity"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar" >
-        </activity>
-        <activity
             android:name="song.jtslkj.activity.BaijiaConsumeActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
         <activity
-            android:name="song.jtslkj.activity.HejiaActivity"
+            android:name="song.jtslkj.activity.HomeActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="song.jtslkj.activity.ImgPreviewActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
