--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,6 +17,17 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission
+        android:name="android.permission.ACCESS_WIFI_STATE">
+    </uses-permission>
+    <uses-permission android:name="android.permission.CALL_PHONE">
+    </uses-permission>
+    <uses-permission
+        android:name="android.permission.ACCESS_COARSE_LOCATION">
+    </uses-permission>
+    <uses-permission
+        android:name="android.permission.READ_PHONE_STATE">
+    </uses-permission>
 
     <application
         android:allowBackup="true"
@@ -136,6 +147,10 @@
         <activity
             android:name="song.jtslkj.activity.ImageShowerActivity"
             android:theme="@style/ImageScale"></activity>
+        <activity
+            android:name="song.jtslkj.activity.GisActivity"
+            android:label="@string/device_main_well"
+            android:theme="@android:style/Theme.NoTitleBar" />
         <activity android:name="song.jtslkj.activity.DeviceActivity" />
         <activity
             android:name="song.jtslkj.activity.DeviceWellActivity"
