--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ apply plugin: 'android'
 
 dependencies {
     implementation fileTree(include: '*.jar', dir: 'libs')
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.5.1'
+    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.5.1'
+    implementation 'com.android.support:support-v4:24.2.0'
+    implementation 'com.android.support:appcompat-v7:25.3.1'
 }
 
 allprojects {
