--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,7 +33,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat">
         <activity
             android:name="song.jtslkj.activity.SplashActivity"
             android:label="@string/app_name"
@@ -87,7 +87,7 @@
         <activity
             android:name="song.jtslkj.activity.HomeActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
         <activity
             android:name="song.jtslkj.activity.ImgPreviewActivity"
             android:label="@string/app_name"
@@ -150,15 +150,19 @@
         <activity
             android:name="song.jtslkj.activity.GisActivity"
             android:label="@string/device_main_well"
-            android:theme="@android:style/Theme.NoTitleBar" />
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name="song.jtslkj.activity.DeviceActivity" />
         <activity
             android:name="song.jtslkj.activity.DeviceWellActivity"
             android:label="@string/device_main_well"
-            android:theme="@android:style/Theme.NoTitleBar" />
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
             android:name="song.jtslkj.activity.DeviceWellDetailActivity"
-            android:theme="@android:style/Theme.NoTitleBar" />
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity
+            android:name="song.jtslkj.activity.DeviceStaActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            />
 
         <service
             android:name="song.jtslkj.service.NotificationService"
