--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ dependencies {
     implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.5.1'
     implementation 'com.android.support:support-v4:24.2.0'
     implementation 'com.android.support:appcompat-v7:25.3.1'
+    implementation 'com.github.huangyanbin:SmartTable:2.1.3'
+    implementation 'com.github.fingerth:FingerthAndroidUtils:1.0.3'
 }
 
 allprojects {
@@ -27,6 +29,7 @@ allprojects {
         mavenLocal()
         jcenter()
         google()
+        maven { url 'https://jitpack.io' }
     }
 }
 
