--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,16 @@ apply plugin: 'android'
 
 dependencies {
     implementation fileTree(include: '*.jar', dir: 'libs')
+    implementation 'com.android.support:recyclerview-v7:25.3.1'
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.5.1'
     implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.5.1'
     implementation 'com.android.support:support-v4:24.2.0'
     implementation 'com.android.support:appcompat-v7:25.3.1'
     implementation 'com.github.huangyanbin:SmartTable:2.1.3'
     implementation 'com.github.fingerth:FingerthAndroidUtils:1.0.3'
+    api("com.afollestad.material-dialogs:core:0.9.5.0") {
+        exclude group: 'com.android.support'
+    }
 }
 
 allprojects {
