--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:25.3.1'
     implementation 'com.github.huangyanbin:SmartTable:2.1.3'
     implementation 'com.github.fingerth:FingerthAndroidUtils:1.0.3'
+    implementation 'com.github.huangdali:DatepickerDialog:v1.0.7'
     api("com.afollestad.material-dialogs:core:0.9.5.0") {
         exclude group: 'com.android.support'
     }
