--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
     <permission
         android:name="oem.permission.SENDMAIL"
-        android:protectionLevel="normal"></permission>
+        android:protectionLevel="normal"/>
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -47,46 +47,50 @@
         <activity
             android:name="song.jtslkj.activity.SplashBaseActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar"></activity>
+            android:theme="@android:style/Theme.NoTitleBar"/>
         <activity
             android:name="song.jtslkj.activity.LoginActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar"></activity>
+            android:theme="@android:style/Theme.NoTitleBar"/>
         <activity
             android:name="song.jtslkj.activity.MainActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar"></activity>
+            android:theme="@android:style/Theme.NoTitleBar"/>
         <activity
             android:name="song.jtslkj.activity.LoginGestureGuidePasswordActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar"></activity>
+            android:theme="@android:style/Theme.NoTitleBar"/>
         <activity
             android:name="song.jtslkj.activity.LoginGestureCreatePasswordActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar"></activity>
+            android:theme="@android:style/Theme.NoTitleBar"/>
         <activity
             android:name="song.jtslkj.activity.LoginGestureUnlockPasswordActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar"></activity>
+            android:theme="@android:style/Theme.NoTitleBar"/>
         <activity
             android:name="song.jtslkj.activity.HomeActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
         <activity
             android:name="song.jtslkj.activity.ImgPreviewActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar"></activity>
+            android:theme="@android:style/Theme.NoTitleBar"/>
         <activity
-            android:name="song.jtslkj.activity.WojiaSettingActivity"
+            android:name="song.jtslkj.activity.ISettingActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar"></activity>
+            android:theme="@android:style/Theme.NoTitleBar"/>
         <activity
-            android:name="song.jtslkj.activity.WojiaActivity"
+            android:name="song.jtslkj.activity.IActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar"></activity>
+            android:theme="@android:style/Theme.NoTitleBar"/>
         <activity
             android:name="song.jtslkj.activity.ImageShowerActivity"
-            android:theme="@style/ImageScale"></activity>
+            android:theme="@style/ImageScale"/>
+        <activity
+            android:name="song.jtslkj.activity.ISettingContentActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar"/>
         <activity
             android:name="song.jtslkj.activity.GisActivity"
             android:label="@string/device_main_well"
